<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/login_subtitle"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/login_username"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:inputType="textEmailAddress"
            android:background="@color/gray_forte"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/login_password"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:background="@color/gray_forte"
            android:textSize="15dp" />



        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_oval"
            android:text="@string/login_signin"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/login_signup"
            android:textColor="@color/gray_normal"
            android:textSize="15dp" />

    </LinearLayout>

</ScrollView>

