<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_username"
        android:textColor="@color/gray_normal"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_password"
        android:textColor="@color/gray_normal"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/text_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textSize="15dp" />
    
    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_signin"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_oval"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/login_signup"
        android:textColor="@color/gray_normal"
        android:textSize="15dp" />

</LinearLayout>

