<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background">

    <include layout="@layout/header_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingTop="0dp">


        <include layout="@layout/frame_profile" />

        <me.doapps.tinder.widget.MediumText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_name"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <me.doapps.tinder.widget.LigthText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/profile_description"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <me.doapps.tinder.widget.MediumText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_plus"
                android:gravity="center"
                android:text="@string/profile_plus"
                android:textColor="@color/red_light"
                android:textSize="14dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_medium" />

            <me.doapps.tinder.widget.MediumText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_setting"
                android:gravity="center"
                android:text="@string/profile_settings"
                android:textColor="@color/red_light"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_image_oval"
                android:padding="20dp"
                android:src="@drawable/ic_user" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_image_oval"
                android:padding="20dp"
                android:src="@drawable/ic_user" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_image_oval"
                android:padding="20dp"
                android:src="@drawable/ic_user" />

        </LinearLayout>

        <me.doapps.tinder.widget.MediumText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/profile_title"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <me.doapps.tinder.widget.LigthText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/profile_subtitle"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <me.doapps.tinder.widget.MediumButton
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_button_red"
            android:gravity="center"
            android:text="@string/profile_create"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </LinearLayout>

</FrameLayout>